# opsAgent

./: codex.md  phase1-plan.md  phase1-review-report.md  phase2-plan.md  pyproject.toml  review-report.md  windows-shadowbot-local-testing.md
configs/: llm.json  rpa.json
src/aiops_agent/: __init__.py  __main__.py  cli.py  config.py  planning.py  policy.py
src/aiops_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/aiops_agent/agent/: controller.py  parser.py  summarizer.py
src/aiops_agent/audit/: __init__.py  logger.py  models.py
src/aiops_agent/llm/: anthropic_provider.py  base.py  client.py  factory.py  langchain_provider.py
src/aiops_agent/sessions/: __init__.py  models.py
src/aiops_agent/storage/: session_store.py  task_store.py
src/aiops_agent/support/: __init__.py  logging.py  trace.py
src/aiops_agent/tasks/: __init__.py  manager.py  models.py
src/aiops_agent/tools/: __init__.py  base.py  executor.py  inspection.py  registry.py
storage/tasks/: 92107909-de04-42aa-bad9-3a81048d310f.json
tests/: test_agent_flow.py  test_intent_parser.py
